--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,9 @@ android:
     - build-tools-27.0.0
     - android-27
 
+    # Extras
+    - extra-android-support
+    - extra-android-m2repository
+
     # System images to test
     - sys-img-armeabi-v7a-android-27
