--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,8 @@ android:
     # System images to test
     - sys-img-armeabi-v7a-android-27
 
+  before_install:
+    - chmod +x gradlew
+
   script:
     - chmod +x ./gradlew
