--- a/typewriterview/build.gradle
+++ b/typewriterview/build.gradle
@@ -4,6 +4,12 @@ apply plugin: 'com.jfrog.bintray'
 
 
 ext {
+    Properties properties = new Properties()
+    properties.load(project.rootProject.file('local.properties').newDataInputStream())
+
+    user = properties.getProperty("bintray.user")
+    key = properties.getProperty("bintray.apikey")
+
     bintrayRepo = 'Test'
     bintrayName = 'typewriterview'
 
