--- a/typewriterview/build.gradle
+++ b/typewriterview/build.gradle
@@ -17,12 +17,12 @@ ext {
     libraryName = 'typewriterview'
     artifact = 'typewriterview'
 
-    libraryDescription = 'A Library to animate content of textview as if it were typed from a typewriter!'
+    libraryDescription = 'A Library to animate content of textview as if it were typed from a typewriter, with animation listeners!'
 
     siteUrl = 'https://github.com/skymansandy/typewriterview'
     gitUrl = 'https://github.com/skymansandy/typewriterview.git'
 
-    libraryVersion = '1.0.6'
+    libraryVersion = '1.1.0'
 
     developerId = 'skymansandy'
     developerName = 'P Sandesh Baliga'
