--- a/demotypewriterview/src/main/AndroidManifest.xml
+++ b/demotypewriterview/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="in.codeshuffle.demotypewriterview">
+    package="in.codeshuffle.typewriterviewexample">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -21,10 +21,10 @@
             tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
