--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,14 @@
 buildscript {
+    ext.kotlin_version = '1.3.71'
     repositories {
         google()
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.3'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+        classpath 'com.novoda:bintray-release:0.9.1'
     }
 }
 
